--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>eBay Web Agent — Dev</title>
   <link rel="stylesheet" href="./styles.css" />
+  <!-- Optional: Override API URL for production -->
+  <!-- <meta name="api-url" content="http://your-server-ip:8000" /> -->
 </head>
 <body>
   <header class="site-header">
