--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eBay Web Agent</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🛍️</text></svg>">
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🛍️</text></svg>">
 </head>
+
 <body>
     <div class="app-container">
         <!-- Sidebar -->
@@ -14,8 +17,8 @@
             <div class="sidebar-header">
                 <div class="logo">
                     <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <circle cx="9" cy="9" r="7"/>
-                        <path d="M21 21l-6-6"/>
+                        <circle cx="9" cy="9" r="7" />
+                        <path d="M21 21l-6-6" />
                     </svg>
                     <h2>eBay Agent</h2>
                 </div>
@@ -36,6 +39,7 @@
                         <option value="openai/gpt-4-turbo">GPT-4 Turbo</option>
                         <option value="openai/gpt-4o">GPT-4o</option>
                         <option value="openai/gpt-3.5-turbo">GPT-3.5 Turbo</option>
+                        <option value="x-ai/grok-4">Grok 4</option>
                         <option value="google/gemini-pro-1.5">Gemini 1.5 Pro</option>
                         <option value="meta-llama/llama-3.1-70b-instruct">Llama 3.1 70B</option>
                     </select>
@@ -45,21 +49,24 @@
                 <div class="utilities-card">
                     <label class="card-label">⚡ Quick Actions</label>
                     <button id="clear-chat" class="utility-btn">
-                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M3 6h18M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2"/>
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <path d="M3 6h18M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2" />
                         </svg>
                         Clear Chat
                     </button>
                     <button id="export-chat" class="utility-btn">
-                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4M7 10l5 5 5-5M12 15V3"/>
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <path d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4M7 10l5 5 5-5M12 15V3" />
                         </svg>
                         Export Chat
                     </button>
                     <button id="toggle-timestamps" class="utility-btn">
-                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <circle cx="12" cy="12" r="10"/>
-                            <path d="M12 6v6l4 2"/>
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <circle cx="12" cy="12" r="10" />
+                            <path d="M12 6v6l4 2" />
                         </svg>
                         Toggle Timestamps
                     </button>
@@ -99,8 +106,9 @@
                 </h1>
                 <div class="chat-header-actions">
                     <button id="toggle-sidebar" class="icon-btn" title="Toggle Sidebar">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M3 12h18M3 6h18M3 18h18"/>
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <path d="M3 12h18M3 6h18M3 18h18" />
                         </svg>
                     </button>
                 </div>
@@ -111,7 +119,8 @@
                     <div class="welcome-message">
                         <div class="welcome-icon">🎉</div>
                         <h2>Welcome to eBay Web Agent!</h2>
-                        <p>Your AI-powered shopping assistant for eBay. Ask me to search for products, compare prices, or get detailed information about items.</p>
+                        <p>Your AI-powered shopping assistant for eBay. Ask me to search for products, compare prices,
+                            or get detailed information about items.</p>
                         <div class="example-queries">
                             <span class="example-label">Try asking:</span>
                             <button class="example-query">"Find me iPhone 16 Pro under $1000"</button>
@@ -124,15 +133,12 @@
 
             <div class="input-area">
                 <div class="input-wrapper">
-                    <textarea 
-                        id="message-input" 
-                        placeholder="Ask me to search eBay products..." 
-                        rows="1"
-                        autofocus
-                    ></textarea>
+                    <textarea id="message-input" placeholder="Ask me to search eBay products..." rows="1"
+                        autofocus></textarea>
                     <button id="send-button" class="btn-send">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z"/>
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z" />
                         </svg>
                     </button>
                 </div>
@@ -145,5 +151,5 @@
 
     <script src="app.js"></script>
 </body>
-</html>
 
+</html>
