--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,13 +35,12 @@
                 <div class="model-selector-card">
                     <label class="card-label">🤖 AI Model</label>
                     <select id="model-select" class="model-select">
-                        <option value="anthropic/claude-3.5-sonnet" selected>Claude 3.5 Sonnet</option>
-                        <option value="openai/gpt-4-turbo">GPT-4 Turbo</option>
-                        <option value="openai/gpt-4o">GPT-4o</option>
-                        <option value="openai/gpt-3.5-turbo">GPT-3.5 Turbo</option>
                         <option value="x-ai/grok-4">Grok 4</option>
-                        <option value="google/gemini-pro-1.5">Gemini 1.5 Pro</option>
-                        <option value="meta-llama/llama-3.1-70b-instruct">Llama 3.1 70B</option>
+                        <option value="x-ai/grok-4-fast">Grok 4 Fast</option>
+                        <option value="x-ai/grok-4.1-fast:free">Grok 4 Fast Free</option>
+                        <option value="openai/gpt-5.1-chat">GPT 5.1 Fast Chat</option>
+                        <option value="google/gemini-2.5-flash">Gemini 2.5 Flash</option>
+                        <option value="anthropic/claude-haiku-4.5">Claude Haiku 4.5</option>
                     </select>
                     <p class="model-note">Claude recommended for best tool usage</p>
                 </div>
